--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <div class="wrapper">
                     <span class="badge blue">Our message</span>
                     <div class="row">
-                        <h4>Dicover everything that's possible with Microsoft</h4>
+                        <h4>Discover everything that's possible with Microsoft</h4>
                     </div>
                     <h5 class="heavy">
                         Our message is what we tell our customers to win their hearts and minds
@@ -524,7 +524,7 @@
                     </div>
                     <div class="row">
                         <h5>We help people achieve goals&mdash;from fixed to fluid, from everyday to exceptional.
-                             Here are a couple of examples of what achievement means for our customers.</h5>
+                             Here are a few examples of what achievement means for our customers.</h5>
                     </div>
                     <div class="row">
                         <div class="bow-wrap">
@@ -592,7 +592,7 @@
                                 <p>Creating by themselves</p>
                             </div>
                             <div class="needs">
-                                <p>Creating in a community, sharing their creations with others. </p>
+                                <p>Creating in a community, sharing their creations with others.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -605,22 +605,22 @@
                         </div>
                         <div class="row">
                             <div class="users">
-                                <p>Being inspired by great ideas</p>
+                                <p>Learning pre-packaged ideas</p>
                             </div>
                             <div class="needs">
-                                <p>Learning who created them and how, acting on the ideas. </p>
+                                <p>Learning who makes them and how, acting on the ideas.</p>
                             </div>
                             <div class="users">
-                                <p>Seeing great products</p>
+                                <p>Seeing the tools</p>
                             </div>
                             <div class="needs">
-                                <p>Seeing how the products are made and designing them themselves.</p>
+                                <p>Knowing how to use the tools.</p>
                             </div>
                             <div class="users">
-                                <p>Creating by themselves</p>
+                                <p>Learning by themselves</p>
                             </div>
                             <div class="needs">
-                                <p>Creating in a community, sharing their creations with others. </p>
+                                <p>Learning from others in a community and sharing their knowledge.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -633,22 +633,22 @@
                         </div>
                         <div class="row">
                             <div class="users">
-                                <p>Being inspired by great ideas</p>
+                                <p>Learning about new ideas after they've happened</p>
                             </div>
                             <div class="needs">
-                                <p>Learning who created them and how, acting on the ideas. </p>
+                                <p>Proactively connecting with ideators, showing how to act on ideas.</p>
                             </div>
                             <div class="users">
-                                <p>Seeing great products</p>
+                                <p>Learning about new tools for their businesses</p>
                             </div>
                             <div class="needs">
-                                <p>Seeing how the products are made and designing them themselves. </p>
+                                <p>Seeing how to use the tools, optimizing the tools for themselves.</p>
                             </div>
                             <div class="users">
-                                <p>Creating by themselves</p>
+                                <p>Running businesses by themselves</p>
                             </div>
                             <div class="needs">
-                                <p>Creating in a community, sharing their creations with others. </p>
+                                <p>Sharing ideas and knowledge in a community.</p>
                             </div>
                         </div>
                     </div>
@@ -1119,7 +1119,7 @@
                         <h5 class="heavy">Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more. </h5>
                     </div>
                     <div class="row master-brand">
-                        <p class="title">Master Brand</p>
+                        <p class="title">Master brand</p>
                     </div>
                     <div class="row">
                         <div class="thirds">
@@ -1624,7 +1624,7 @@
                         <h4>How to use Microsoft Store icon</h4>
                     </div>
                     <div class="row">
-                        <h5>The icon can no longer be used decoratively or in a lock-up with the text. Give the icon a minimum clear space equal to the Microsoft symbol. Always use the icon in the tile, never cut it out. Always use the full color icon.</h5>
+                        <h5>The icon can no longer be used decoratively or in a lock-up with the text. Give the icon a minimum clear space equal to the Microsoft symbol. Always use the icon in the tile, never cut it out. Always use the full-color icon.</h5>
                     </div>
                     <div class="row">
                         <p class="title">Allowed use</p>
@@ -1801,17 +1801,17 @@
             <section id="section-5-2">
                 <div class="wrapper">
                     <div class="row">
-                        <span class="badge green">accessibilty</span>
+                        <span class="badge green">accessibility</span>
                     </div>
                     <div class="row">
                         <h4>We are accessible</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">It's in our mission statement: Empower every person on the planet to achieve more. Designing for Accessibilty opens up our experiences and reflects how people adapt to the world around them.</h5>
+                        <h5 class="heavy">It's in our mission statement: Empower every person on the planet to achieve more. Designing for accessibility opens up our experiences and reflects how people adapt to the world around them.</h5>
                     </div>
                     <div class="row">
                         <div class="thirds">
-                            <p class="title large">Recognize exlusion</p>
+                            <p class="title large">Recognize exclusion</p>
                             <p>Exclusion happens when we solve problems using our own biases. As Microsoft designers, we seek out those exclusions, and use them as opportunities to create new ideas and inclusive designs.
                             </p>
                         </div>
@@ -1830,7 +1830,7 @@
 
                     <div class="row">
                         <div class="thirds">
-                            <p class="title large">Ensure all site content is accessibile </p>
+                            <p class="title large">Ensure all site content is accessible </p>
                             <p>Evoke wonder and discovery. From social to software and using our products, we create experiences that delight customers across all our brand touch points.</p>
                         </div>
                         <div class="thirds">
@@ -1845,7 +1845,7 @@
 
                     <div class="row">
                         <p><a href="https://microsoft.sharepoint.com/:w:/r/teams/msenable/_layouts/15/Doc.aspx?sourcedoc=%7B596F8B46-8D84-4605-A396-62106243C661%7D&file=MAS%20Pre-filtered%20for%20Web.docx&action=edit&mobileredirect=true"
-                            class="full" target="_blank">MAS pre-filtered web Accessibilty guidelines </a></p>
+                            class="full" target="_blank">MAS pre-filtered web accessibilty guidelines </a></p>
                     </div>
                     <div class="row">
                         <p><a href="https://www.microsoft.com/en-us/accessibility/default.aspx" class="full" target="_blank">See the full Microsoft accessibilty standards </a></p>
@@ -2470,7 +2470,7 @@
                     <div class="row">
                         <div class="fat-thirds"> 
                             <div class="single">
-                                <p class="title">Capture the real world</p>
+                                <p class="title">Focus on real people</p>
                                 <img class="lazy" src="assets/climbers.png" alt="two people climbing a mountain">
                                 <p>Highlight the true personalities of people, their environments, and details. Think about how the images can work together, rather than trying to say everything in a single moment.</p>
                             </div>
@@ -2525,7 +2525,7 @@
             <section id="section-5-9">
                 <div class="wrapper">
                     <div class="row">
-                        <span class="badge green">Life style photography: things to avoid</span>
+                        <span class="badge green">Lifestyle photography: things to avoid</span>
                     </div>
                     <div class="row">
                         <h4>Help us move away from stock photography.
@@ -2660,7 +2660,7 @@
 
                             <p class="title">Contextual</p>
                             <img class="lazy" src="assets/context.png" alt="laptop shown in context">
-                            <p>Showing products with in the context of their use, illustrating empowering scenarios.</p>
+                            <p>Showing products within the context of their use, illustrating empowering scenarios.</p>
 
                         </div>
                         <div class="fat-thirds">
@@ -2714,7 +2714,7 @@
                         <div class="fourths">
                             <p class="title">Apply a focused use of color</p>
                             <img class="lazy" src="assets/illustration-4.png" alt="globe with applications around it">
-                            <p>Use a streamlined application of color to give balance and character and to ensure broader relevence.
+                            <p>Use a streamlined application of color to give balance and character and to ensure broader relevance.
                             </p>
                         </div>
                     </div>
