update Dougs copy 4-17

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                         <div class="dos">
                             <p>Everyone is an artist with these apps</p>
                             <p>
-                                Michelangelo, Raphael, Donatello – you'll come darn close to making this list with these new apps
+                                Michelangelo, Raphael, Donatello &mdash; you'll come darn close to making this list with these new apps
                             </p>
                         </div>
                         <div class="donts">
@@ -981,7 +981,7 @@
                     <div class="row-lined hidden-xs">
                         <div class="thirds">
                             <div class="explanation">
-                                <p class="title">Currate don't just promote</p>
+                                <p class="title">Curate don't just promote</p>
                                 <p>Curate compelling experiences, don't promote robotic, irrelevant, non-cohesive offerings.
                                     </p>
                             </div>
@@ -1464,8 +1464,8 @@
                         </div>
                     </div>
                     <div class="row"></div>
-                    <div class="cta">
-                        <a href="https://microsoft.sharepoint.com/teams/BrandCentral/Guidelines/Microsoft_logo_guidelines.pdf">Full logo guidelines</a>
+                    <div class="cta single">
+                        <a href="mailto:storebrand%40microsoft.com?subject="class="full" target="_blank">Contact us</a>
                     </div>
                 </div>
             </section>
@@ -1476,7 +1476,7 @@
                         <h4>That's how we use the logo</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">Use the full color Microsoft logo on every communication, except for social.</h5>
+                        <h5 class="heavy">Use the full-color Microsoft logo on every communication, except for social.</h5>
                     </div>
                     <div class="row">
                         <p class="title">Banners</p>
@@ -2794,7 +2794,7 @@
                         <h4>Monoline illustrations are simple metaphors for abstract concepts </h4>
                     </div>
                     <div class="row">
-                        <h5>Don't mix metaphors and communicate only what's needed in a fast <u>and simple manner with monoline</u> illustrations. Their detail scales gracefully from the smallest to the largest screens. They're based on simple shapes—lines, squares, circles—and are composed with pure geometry in mind.</h5>
+                        <h5>Don't mix metaphors and communicate only what's needed in a fast and simple manner with monoline illustrations. Their detail scales gracefully from the smallest to the largest screens. They're based on simple shapes—lines, squares, circles—and are composed with pure geometry in mind.</h5>
                     </div>
 
                     <!-- spacing -->
@@ -2821,7 +2821,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <p class="title">Monoline illustrations examples</p>
+                        <p class="title">Monoline illustration examples</p>
                     </div>
 
                     
