UPdates with Lillianna Rd1 4-18

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <a href="#section-5-12" class="green">Illustration: things to avoid</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-5-13" class="green">Monoline illustrations</a>
+                            <a href="#section-5-13" class="green">Glyphs</a>
                         </li>
                     </ul>
                 </li>
@@ -1507,7 +1507,7 @@
                         <h4>We use the Microsoft symbol very restrictively</h4>
                     </div>
                     <div class="row">
-                        <h5>Here are a few approved examples. If you are looking to use the sybol on its own, <a href="mailto:storebrand%40microsoft.com?subject=">reach out to us</a>.</h5>
+                        <h5>Here are a few approved examples. If you are looking to use the symbol on its own, <a href="mailto:storebrand%40microsoft.com?subject=">reach out to us</a>.</h5>
                     </div>
                     <div class="row-five">
                         <div class="fat-thirds">
@@ -1749,10 +1749,10 @@
                         </div>
                     </div>
                     <div class="row" style="margin-top:15px;">
-                        <p>Not sure what to use? <a href="mailto:storebrand%40microsoft.com?subject=">reach out to us.</a></p>
+                        <p>Not sure what to use? <a href="mailto:storebrand%40microsoft.com?subject=">Reach out to us.</a></p>
                     </div>
                     <div class="row">
-                        <p><a href="https://developer.microsoft.com/en-us/store/badges">See the full Microsoft Store badge guidelines</a></p>
+                        <p><a href="https://developer.microsoft.com/en-us/store/badges" class="full">See the full Microsoft Store badge guidelines</a></p>
                     </div>
                 </div>
             </section>
@@ -2320,7 +2320,7 @@
 
 
                     <div class="row">
-                        <h5>Not sure what to pick—a monoline illustration, an illustration, a lifestyle photo? Follow the guidelines to create a simple experience. Don't misplace elements. </h5>
+                        <h5>Not sure what to pick—a glyph, an illustration, a lifestyle photo? Follow the guidelines to create a simple experience. Don't misplace elements. </h5>
                     </div>
 
 
@@ -2350,11 +2350,11 @@
                                 illustration as patterns or decorations. </p>
                             </div>
                         <div class="fourths"> 
-                            <p class="title">Monoline illustrations</p>
-                            <img class="lazy" src="assets/line-illustration.png" alt="monoline illustration example">
-                            <p>Monoline illustrations are simple metaphors for abstract concepts. Delivery, Pick Up in Store,
-                                Return, etc. We don't use monoline illustrations to show how our customers use products.
-                                We don't use monoline illustrations as patterns or decorations. </p>
+                            <p class="title">Glyphs</p>
+                            <img class="lazy" src="assets/line-illustration.png" alt="glyph example">
+                            <p>Glyphs are simple metaphors for abstract concepts. Delivery, Pick Up in Store,
+                                Return, etc. We don't use glyphs to show how our customers use products.
+                                We don't use glyphs as patterns or decorations. </p>
                             </div>
                     </div>
                 </div>
@@ -2383,7 +2383,7 @@
                             </div>
                             <div class="single">
                                 <img class="lazy" src="assets/lifestyle-abstract.png" alt="don't use lifestyle photography to illustrate abstract ideas">
-                                <p>Use monoline illustrations to illustrate simple abstract concepts.</p>
+                                <p>Use glyphs to illustrate simple abstract concepts.</p>
 
                             </div>                          
                         </div>
@@ -2422,7 +2422,7 @@
                             </div>
                             <div class="single">
                                 <img class="lazy" src="assets/lifestlye-line.png" alt="don't use illustrations for abstract concepts">
-                                <p>Use monoline illustrations to illustrate simple abstract concepts.</p>
+                                <p>Use glyphs to illustrate simple abstract concepts.</p>
                             </div>
                                   
                         </div>
@@ -2788,13 +2788,13 @@
             <section id="section-5-13">
                 <div class="wrapper">
                     <div class="row">
-                        <span class="badge green">Monoline illustrations </span>
+                        <span class="badge green">Glyphs </span>
                     </div>
                     <div class="row">
-                        <h4>Monoline illustrations are simple metaphors for abstract concepts </h4>
+                        <h4>Glyphs are simple metaphors for abstract concepts </h4>
                     </div>
                     <div class="row">
-                        <h5>Don't mix metaphors and communicate only what's needed in a fast and simple manner with monoline illustrations. Their detail scales gracefully from the smallest to the largest screens. They're based on simple shapes—lines, squares, circles—and are composed with pure geometry in mind.</h5>
+                        <h5>Don't mix metaphors and communicate only what's needed in a fast and simple manner with glyphs. Their detail scales gracefully from the smallest to the largest screens. They're based on simple shapes—lines, squares, circles—and are composed with pure geometry in mind.</h5>
                     </div>
 
                     <!-- spacing -->
@@ -2804,15 +2804,15 @@
                     <div class="row-seven">
                         <div class="half dos">
                             <p class="title">Do</p>
-                            <p>Use monoline illustrations to illustrate simple yet abstract concepts.</p>
-                            <p>When creating a new one, use the same monoline illustration style as in the library.</p>
+                            <p>Use Glyphs to illustrate simple yet abstract concepts.</p>
+                            <p>When creating a new one, use the same glyph style as in the library.</p>
                             <p></p>
                         </div>
                         <div class="half donts">
                             <p class="title ">Do not</p>
-                            <p>Misuse monoline illustrations for other purposes.</p>
-                            <p>Use monoline illustrations as patterns or decorations.</p>
-                            <p>Recreate similar-looking monoline illustrations for aesthetic reasons. Only recreate if a metaphor doesn't already exist.</p>
+                            <p>Misuse Glyphs for other purposes.</p>
+                            <p>Use Glyphs as patterns or decorations.</p>
+                            <p>Recreate similar-looking Glyphs for aesthetic reasons. Only recreate if a metaphor doesn't already exist.</p>
                         </div>
                     </div>
 
@@ -2821,7 +2821,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <p class="title">Monoline illustration examples</p>
+                        <p class="title">glyph examples</p>
                     </div>
 
                     
@@ -2846,7 +2846,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <p class="title">Monoline illustrations in use</p>
+                        <p class="title">Glyphs in use</p>
                     </div>
                     <div class="row-twelve">
                         <div class="fourths">
@@ -2877,7 +2877,7 @@
                     <div class="row" role="presentation"></div>
 
                     <div class="row">
-                        <p class="title">Monoline illustration guidance</p>
+                        <p class="title">Glyph guidance</p>
                     </div>
                     <div class="row">
                         <div class="fourths">
@@ -2890,11 +2890,11 @@
                         </div>
                         <div class="fourths">
                             <img class="lazy" src="assets/mono-line-3.png" alt="monoline box">
-                            <p>If needed, create a new monoline illustration using the same style as the library. </p>
+                            <p>If needed, create a new glyph using the same style as the library. </p>
                         </div>
                     </div>
                     <div class="row">
-                        <p><a href="http://getmwf.com/getting-started/designing/glyphs.html" class="full">See complete monoline illustration guidelines</a></p>
+                        <p><a href="http://getmwf.com/getting-started/designing/glyphs.html" class="full">See complete glyph guidelines</a></p>
                     </div>
                 </div>
             </section>
